--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint-fix": "eslint --ext .js --ignore-path .gitignore --fix ."
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
