--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
+    "test": "mocha --require test/setup.js --recursive test/unit",
     "lint": "eslint --ext .js .",
     "lint-checkstyle": "eslint --ext .js --ignore-path .gitignore -o reports/style/eslint.xml -f checkstyle .",
     "lint-fix": "eslint --ext .js --ignore-path .gitignore --fix ."
@@ -18,8 +19,11 @@
   },
   "devDependencies": {
     "acorn": "^6.0.4",
+    "chai": "^4.2.0",
     "eslint": "^5.10.0",
     "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.14.0"
+    "eslint-plugin-import": "^2.14.0",
+    "mocha": "^5.2.0",
+    "sinon": "^7.2.2"
   }
 }
